--- a/nodeMiddleware/package.json
+++ b/nodeMiddleware/package.json
@@ -3,9 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+     "pkg":"pkg . -t node16-win-x64 --out-path=dist-node/"
+  },
   "dependencies": {
     "NeteaseCloudMusicApi": "^4.6.7",
     "body-parser": "^1.20.0",
     "express": "^4.18.1"
+  },
+  "bin": "./index.js",
+  "pkg": {
+    "assets": [
+      "dist/**/*",
+      "node_modules/vm2/lib/setup-sandbox.js"
+    ]
   }
 }
