--- a/msimg32/msimg32.vcxproj.filters
+++ b/msimg32/msimg32.vcxproj.filters
@@ -42,4 +42,7 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="cef\libcef.lib" />
+  </ItemGroup>
 </Project>
