feat: get some msg

--- a/msimg32/msimg32.vcxproj
+++ b/msimg32/msimg32.vcxproj
@@ -151,12 +151,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="App.h" />
     <ClInclude Include="EasyCEFHooks.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="App.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="EasyCEFHooks.cpp" />
     <ClCompile Include="pch.cpp">
