--- a/nodeMiddleware/package.json
+++ b/nodeMiddleware/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-     "pkg":"pkg . -t node16-win-x64 --out-path=dist-node/"
+    "pkg": "pkg . -t node16-win-x64 --out-path=dist-node/"
   },
   "dependencies": {
-    "NeteaseCloudMusicApi": "^4.6.7",
     "body-parser": "^1.20.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "NeteaseCloudMusicApi": "^4.6.7",
+    "reconnecting-websocket": "^4.4.0",
+    "ws": "^8.8.1"
   },
   "bin": "./index.js",
   "pkg": {
