--- a/netMusicFront/package.json
+++ b/netMusicFront/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.0.0",
+    "animejs": "^3.2.1",
     "lrc-file-parser": "^2.0.0",
+    "progressbar.js": "^1.1.0",
     "reconnecting-websocket": "^4.4.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
