--- a/nodeMiddleware/package.json
+++ b/nodeMiddleware/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "pkg": "pkg . -t node16-win-x64 --out-path=dist-node/"
+    "pkg": "pkg . -t node16-win-x64 --out-path=dist-node/",
+    "run": "node ./index.js"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
