--- a/msimg32/msimg32.vcxproj.filters
+++ b/msimg32/msimg32.vcxproj.filters
@@ -49,6 +49,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="cef\libcef.lib" />
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
