--- a/nodeMiddleware/package.json
+++ b/nodeMiddleware/package.json
@@ -8,9 +8,13 @@
     "run": "node ./index.js"
   },
   "dependencies": {
+    "NeteaseCloudMusicApi": "^4.6.7",
+    "axios": "^1.1.2",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "NeteaseCloudMusicApi": "^4.6.7",
+    "form-data": "^4.0.0",
+    "pako": "^2.0.4",
+    "prettier": "^2.7.1",
     "reconnecting-websocket": "^4.4.0",
     "ws": "^8.8.1"
   },
